# ghostmobile

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ghostmobile/: __init__.py  analyzer.py  axml.py  axml_encode.py  cli.py  manifest.py  models.py  package.py  report.py  secrets.py
src/ghostmobile/checks/: __init__.py  android.py  base.py  ios.py
tests/: conftest.py  samples.py  test_android_checks.py  test_axml.py  test_cli.py  test_ios_checks.py  test_package.py  test_report.py
