[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostmobile"
version = "0.1.0"
description = "Static security analyzer for Android APK and iOS IPA packages (authorized review, static only)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "joemunene-by" }]
keywords = ["security", "mobile", "apk", "ipa", "android", "ios", "static-analysis", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ghostmobile = "ghostmobile.cli:app"

[project.urls]
Homepage = "https://github.com/joemunene-by/ghostmobile"
Repository = "https://github.com/joemunene-by/ghostmobile"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
# UP042: str+Enum is intentional for JSON-serializable enum values.
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# B008: Typer relies on function calls (typer.Option/Argument) as defaults.
"src/ghostmobile/cli.py" = ["B008"]
"tests/*" = ["B011"]
